src/engine/horizon/rust/render-post/src/tests/err-unclosed-tag/expected.stderr
[31merror:[0m unexpected end of file
   ╭─[ <unknown>:4:8 ]
   │
 1 │ <note>
   │ ┬  
   │ ╰── ... when reading this element
   │ 
───╯

compilation failed
